# caption-generation

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  jobs.py  main.py  models.py  pipeline.py
backend/app/api/: routes.py
backend/app/services/: formats.py  llm.py  media.py  transcribe.py  translate.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_formats.py  test_llm.py  test_translate.py
docker/: entrypoint.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Dropzone.tsx  JobProgress.tsx  JobResult.tsx  OptionsForm.tsx  RecentJobs.tsx  ui.tsx
frontend/src/lib/: api.ts  constants.ts  format.ts
scripts/: dev.sh
