[project]
name = "caption-generation"
version = "0.1.0"
description = "Self-hosted, local-first subtitle, chapter, summary & translation generator"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function-call defaults (Depends/File) by design

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]  # make `app` importable under `pytest` (not just `python -m pytest`)
